# seed-and-spoon

./: .coveragerc  .env.example  .flake8  .gitignore  .mcp.json  ABOUT_PAGE_CUSTOMIZATION.md  ARCHITECTURE.md  BACKEND_API_REQUIREMENTS.md  BACKEND_README.md  BACKEND_SETUP_SUMMARY.md  BUN_HYBRID_MIGRATION.md  BUN_MIGRATION_COMPLETE.md  BUN_MIGRATION_PLAYBOOK.md  BUN_QUICKSTART.md  CLAUDE.md  CNAME  DEPLOYMENT.md  Dockerfile.bun  FRONTEND_BACKEND_CONNECTION.md  LICENSE  Makefile  PHOTO_PLACEMENT_GUIDE.md  PROJECT_OVERVIEW.md  README.md  RECIPES_IMPLEMENTATION_SUMMARY.md  RECIPES_README.md  SETUP.md  SETUP_COMMANDS.md  SPOONASSIST_DEPLOYMENT.md  STRIPE_QUICK_START.md  STRIPE_SETUP.md  SUBDOMAIN_DEBUG.md  SUPABASE_API_MIGRATION.md  VERIFICATION.md  backend.gitignore  bunfig.toml  docker-compose.bun.yml  docker-compose.yml  index.html  manage.py  (+11 more)
CSS/: styles.css
__tests__/: bun-migration.test.js
analytics/: events.ts  posthog.ts
app/: globals.css  layout.jsx  layout.tsx  not-found.jsx  page.jsx  page.tsx
components/: AnalyticsLoader.jsx  BelowFold.jsx  Button.jsx  CapabilityStatementViewer.jsx  CheckoutForm.jsx  CookieBanner.jsx  CookieSettingsModal.jsx  DonationCard.tsx  DonationGrid.tsx  EmailSignup.jsx  Footer.jsx  FooterBanner.jsx  FooterBrand.jsx  FooterVisual.jsx  Header.jsx  Header.module.css  Header.tsx  Hero.jsx  HeroContent.jsx  HeroSlideshow.jsx  HeroVideo.jsx  ImpactEngine.tsx  NJFoodSecurityPlanCard.jsx  NotificationBell.jsx  OnboardingModal.jsx  ProtectedRoute.jsx  RoleGuard.jsx  ScrollReveal.jsx  SiteChrome.jsx  SmoothScroll.jsx  SocialCTA.jsx  SpoonAssistFeature.jsx  StayConnected.jsx  StoryScroll.jsx  ThemeToggle.jsx  WhyThisMatters.jsx  icons.jsx
config/: footer.js
contexts/: AuthContext.jsx  DemoContext.jsx
core/: admin.py  campaign_views.py  models.py  payment_views.py  serializers.py  urls.py  views.py  volunteer_views.py
data/: boardAssessment.js  programs.ts  recipes.js  retailerLinks.js  socialLinks.js  spoonassistV2Seed.js  volunteerOnboarding.js
docs/: BACKEND.md  GET_HELP_FEATURE.md  IMPORTING_DATA.md  MONGODB_SETUP.md
js/: main.js
(+530 files in other folders)
